--- a/src/ES/AgendaBundle/Resources/views/layout.html.twig
+++ b/src/ES/AgendaBundle/Resources/views/layout.html.twig
@@ -1,16 +1,16 @@
 {% extends "::layout.html.twig" %}
 
 {% block title %}
-  Fichiers - {{ parent() }}
+  Agenda - {{ parent() }}
 {% endblock %}
 
 {% block body %}
 
-  <h1>Gestionnaire de Fichiers</h1>
+  <h1>Évènements</h1>
 
   <hr>
 
-  {% block esfile_body %}
+  {% block esagenda_body %}
   {% endblock %}
 
 {% endblock %}
