--- a/src/ES/AgendaBundle/Resources/views/Agenda/edit.html.twig
+++ b/src/ES/AgendaBundle/Resources/views/Agenda/edit.html.twig
@@ -1,19 +1,19 @@
 {% extends "ESAgendaBundle::layout.html.twig" %}
 
 {% block title %}
-  Modifier un évènement - {{ parent() }}
+  {{ 'Modifier un évènement'|trans }} - {{ parent() }}
 {% endblock %}
 
 {% block esagenda_body %}
 
-  <h2>Modifier un évènement</h2>
+  <h2>{{ 'Modifier un évènement'|trans }}</h2>
 
   {{ include("ESAgendaBundle:Agenda:form.html.twig") }}
 
   <p>
-    <a href="{{ path('es_agenda_view', {'id': event.id}) }}" class="btn btn-default">
+    <a href="{{ path('es_agenda_view', {'id': event.id}) }}" class="btn btn-default btn-primary">
       <i class="glyphicon glyphicon-chevron-left"></i>
-      Retour à l'évènement
+      {{ 'Retour à l\'évènement'|trans }}
     </a>
   </p>
 
