--- a/src/ES/FileBundle/Resources/views/layout.html.twig
+++ b/src/ES/FileBundle/Resources/views/layout.html.twig
@@ -1,12 +1,12 @@
 {% extends "::layout.html.twig" %}
 
 {% block title %}
-  Fichiers - {{ parent() }}
+ {{ 'Fichiers'|trans }} - {{ parent() }}
 {% endblock %}
 
 {% block body %}
 
-  <h1>Gestionnaire de Fichiers</h1>
+  <h1>{{ 'Gestionnaire de Fichiers'|trans }}</h1>
 
   <hr>
 
