--- a/src/ES/PlatformBundle/Resources/views/Advert/selfadverts.html.twig
+++ b/src/ES/PlatformBundle/Resources/views/Advert/selfadverts.html.twig
@@ -1,18 +1,18 @@
 {% extends "ESPlatformBundle::layout.html.twig" %}
 
-{% block title %}{{ parent() }} - Accueil{% endblock %}
+{% block title %}{{ parent() }} - {{ 'Accueil'|trans }}{% endblock %}
 
 {% block esplatform_body %}
-	<h2>Mes annonces</h2>
+	<h2>{{ 'Mes annonces'|trans }}</h2>
 	
 	<ul>
     	{% for advert in listAdverts %}
       		<li>
-        		<a href="{{ path('es_platform_view', {'id': advert.id}) }}">{{ advert.title }}</a> le {{ advert.date|date('d/m/Y') }}
+        		<a href="{{ path('es_platform_view', {'id': advert.id}) }}">{{ advert.title }}</a> {{ 'le'|trans }} {{ advert.date|date('d/m/Y') }}
         	</li>
     	
     	{% else %}
-			<li>Pas (encore !) d'annonces</li>
+			<li>{{ 'Pas (encore !) d\'annonces'|trans }}</li>
     	{% endfor %}
 
 	</ul>
