--- a/src/ES/PlatformBundle/Resources/views/layout.html.twig
+++ b/src/ES/PlatformBundle/Resources/views/layout.html.twig
@@ -1,12 +1,12 @@
 {% extends "::layout.html.twig" %}
 
 {% block title %}
-  Annonces - {{ parent() }}
+  {{ 'Annonces'|trans }} - {{ parent() }}
 {% endblock %}
 
 {% block body %}
 
-  <h1>Annonces</h1>
+  <h1>{{ 'Annonces'|trans }}</h1>
 
   <hr>
 
