--- a/src/ES/UserBundle/Resources/views/layout.html.twig
+++ b/src/ES/UserBundle/Resources/views/layout.html.twig
@@ -13,4 +13,7 @@
   {% block fos_user_content %}
   {% endblock fos_user_content %}
 
+  {% block esuser_body %}
+  {% endblock esuser_body %}
+
 {% endblock %}
