--- a/src/ES/AgendaBundle/Resources/views/Agenda/delete.html.twig
+++ b/src/ES/AgendaBundle/Resources/views/Agenda/delete.html.twig
@@ -1,23 +1,23 @@
 {% extends "ESAgendaBundle::layout.html.twig" %}
 
 {% block title %}
-	Supprimer un évènement - {{ parent() }}
+	{{ 'Supprimer un évènement'|trans }} - {{ parent() }}
 {% endblock %}
  
 {% block esagenda_body %}
 
-  <h2>Supprimer un évènement</h2>
+  <h2>{{ 'Supprimer un évènement'|trans }}</h2>
 
   <p>
-	Êtes vous certain de vouloir supprmer l'évènement "{{ event.name }}" ?
+	{{ 'Êtes vous certain de vouloir supprimer l\'évènement'|trans }} "{{ event.name }}" ?
   </p>
 
   <form action="{{ path('es_agenda_delete', {'id': event.id}) }}" method="post">
     <a href="{{ path('es_agenda_view', {'id': event.id}) }}" class="btn btn-default">
       <i class="glyphicon glyphicon-chevron-left"></i>
-      Retour à l'évènement
+      {{ 'Retour à l\'évènement'|trans }}
     </a>
-    <input type="submit" value="Supprimer" class="btn btn-danger" />
+    <input type="submit" value="{{ 'Supprimer'|trans }}" class="btn btn-danger" />
     {{ form_rest(form) }}
   </form>
 
