--- a/src/ES/AgendaBundle/Resources/views/Agenda/view.html.twig
+++ b/src/ES/AgendaBundle/Resources/views/Agenda/view.html.twig
@@ -1,30 +1,30 @@
 {% extends "ESAgendaBundle::layout.html.twig" %}
 
 {% block title %}
-  Lecture d'un évènement - {{ parent() }}
+  {{ 'Lecture d\'un évènement'|trans }} - {{ parent() }}
 {% endblock %}
 
 {% block esagenda_body %}
 
   <h2>{{ event.name }}</h2>
-  <i>Du {{ event.dateBeginning|date('d/m/Y') }}, {{  event.dateBeginning|date('H:i') }} à {{ event.dateEnding|date('d/m/Y') }}, {{  event.dateEnding|date('H:i') }}</i>
+  <i>{{ 'Du'|trans }} {{ event.dateBeginning|date('d/m/Y') }}, {{  event.dateBeginning|date('H:i') }} {{ 'à'|trans }} {{ event.dateEnding|date('d/m/Y') }}, {{  event.dateEnding|date('H:i') }}</i>
 
   <div class="well">
     {{ event.description }}
   </div>
 
   <p>
-    <a href="{{ path('es_agenda_index') }}" class="btn btn-default">
+    <a href="{{ path('es_agenda_index') }}" class="btn btn-default btn-primary">
       <i class="glyphicon glyphicon-chevron-left"></i>
-      Retour
+      {{ 'Retour'|trans }}
     </a>
-    <a href="{{ path('es_agenda_edit', {'id': event.id}) }}" class="btn btn-default">
+    <a href="{{ path('es_agenda_edit', {'id': event.id}) }}" class="btn btn-default btn-dark">
       <i class="glyphicon glyphicon-edit"></i>
-      Modifier l'évènement
+      {{ 'Modifier l\'évènement'|trans }}
     </a>
     <a href="{{ path('es_agenda_delete', {'id': event.id}) }}" class="btn btn-danger">
       <i class="glyphicon glyphicon-trash"></i>
-      Supprimer l'évènement
+      {{ 'Supprimer l\'évènement'|trans }}
       </a>
   </p>
 
