--- a/src/ES/AgendaBundle/Resources/views/layout.html.twig
+++ b/src/ES/AgendaBundle/Resources/views/layout.html.twig
@@ -1,12 +1,12 @@
 {% extends "::layout.html.twig" %}
 
 {% block title %}
-  Agenda - {{ parent() }}
+  {{ "Agenda"|trans }} - {{ parent() }}
 {% endblock %}
 
 {% block body %}
 
-  <h1>Évènements</h1>
+  <h1>{{ 'Évènements'|trans }}</h1>
 
   <hr>
 
