--- a/src/ES/FileBundle/Resources/views/File/addDirectory.html.twig
+++ b/src/ES/FileBundle/Resources/views/File/addDirectory.html.twig
@@ -3,9 +3,9 @@
 {% block body %}
 
 	{% if directory is null %}
-		<h2>Créer un dossier</h2>
+		<h2>{{ 'Créer un dossier'|trans }}</h2>
 	{% else %}
-		<h2>Créer un dossier dans le dossier {{ directory.name }}</h2>
+		<h2>{{ 'Créer un dossier dans le dossier'|trans }} {{ directory.name }}</h2>
 	{% endif %}
 	{{ include("ESFileBundle:File:form.html.twig") }}
 
