--- a/src/ES/FileBundle/Resources/views/File/renameDirectory.html.twig
+++ b/src/ES/FileBundle/Resources/views/File/renameDirectory.html.twig
@@ -1,12 +1,12 @@
 {% extends "ESFileBundle::layout.html.twig" %}
 
 {% block title %}
-  Renomer - {{ parent() }}
+  {{ 'Renomer'|trans }} - {{ parent() }}
 {% endblock %}
 
 {% block esfile_body %}
 
-  <h2>Renomer un dossier</h2>
+  <h2>{{ 'Renomer un dossier'|trans }}</h2>
 
   {{ include("ESFileBundle:File:form.html.twig") }}
 
