--- a/src/ES/PlatformBundle/Resources/views/Advert/delete.html.twig
+++ b/src/ES/PlatformBundle/Resources/views/Advert/delete.html.twig
@@ -1,23 +1,23 @@
 {% extends "ESPlatformBundle::layout.html.twig" %}
 
 {% block title %}
-	Supprimer une annonce - {{ parent() }}
+	{{ 'Supprimer une annonce'|trans }} - {{ parent() }}
 {% endblock %}
  
 {% block esplatform_body %}
 
-  <h2>Supprimer une annonce</h2>
+  <h2>{{ 'Supprimer une annonce'|trans }}</h2>
 
   <p>
-	Êtes vous certain de vouloir supprmer l'annonce "{{ advert. title }}" ?
+	{{ 'Êtes vous certain de vouloir supprmer l\'annonce'|trans }} "{{ advert. title }}" ?
   </p>
 
   <form action="{{ path('es_platform_delete', {'id': advert.id}) }}" method="post">
-    <a href="{{ path('es_platform_view', {'id': advert.id}) }}" class="btn btn-default">
+    <a href="{{ path('es_platform_view', {'id': advert.id}) }}" class="btn btn-default btn-primary">
       <i class="glyphicon glyphicon-chevron-left"></i>
-      Retour à l'annonce
+      {{ 'Retour à l\'annonce'|trans }}
     </a>
-    <input type="submit" value="Supprimer" class="btn btn-danger" />
+    <input type="submit" value="{{ 'Supprimer'|trans }}" class="btn btn-danger" />
     {{ form_rest(form) }}
   </form>
 
