--- a/src/ES/PlatformBundle/Resources/views/Advert/index.html.twig
+++ b/src/ES/PlatformBundle/Resources/views/Advert/index.html.twig
@@ -1,30 +1,73 @@
 {% extends "ESPlatformBundle::layout.html.twig" %}
 
-{% block title %}{{ parent() }} - Accueil{% endblock %}
+{% block title %}{{ parent() }} - {{ 'Accueil'|trans }}{% endblock %}
 
 {% block esplatform_body %}
-	<h2>Liste des annonces</h2>
+	<h2>{{ 'Liste des annonces'|trans }}</h2>
+
+	<div class="list-group">
+		{% for advert in listAdverts %}
+		  <a href="{{ path('es_platform_view', {'id': advert.id}) }}" class="list-group-item list-group-item-action flex-column align-items-start">
+		    <div class="d-flex w-100 justify-content-between">
+		      <h5 class="mb-1">{{ advert.title }}</h5>
+		      <small>{{ 'Du'|trans }} {{ advert.startDate|date('d/m/Y') }}, {{ 'au'|trans }} {{ advert.endDate|date('d/m/Y') }}</small>
+		    </div>
+		    <p class="mb-1">{{ advert.content|length > 80 ? advert.content|slice(0, 80) ~ '...' : advert.content }}</p>
+		    <div class="d-flex w-100 justify-content-between">
+		    	<small>{% for category in advert.categories %}{{ category.name }}{% if not loop.last %},{% endif %}{% endfor %}</small>
+		    	<small><strong>{{ advert.price }}$</strong></small>
+		    </div>
+		  </a>
+
+		{% else %}
+			<li>{{ 'Pas (encore !) d\'annonces'|trans }}</li>
+    	{% endfor %}
+	 </div>
+
+
+
+
+
+
+
+
+
+
+
 	
 	<ul>
     	{% for advert in listAdverts %}
       		<li>
-        		<a href="{{ path('es_platform_view', {'id': advert.id}) }}">{{ advert.title }}</a> par {{ advert.author }}, le {{ advert.date|date('d/m/Y') }}
+        		<a href="{{ path('es_platform_view', {'id': advert.id}) }}">{{ advert.title }}</a> {{ 'par'|trans }} {{ advert.author }}, {{ 'le'|trans }} {{ advert.date|date('d/m/Y') }}
         	</li>
     	
     	{% else %}
-			<li>Pas (encore !) d'annonces</li>
+			<li>{{ 'Pas (encore !) d\'annonces'|trans }}</li>
 
     	{% endfor %}
 
 	</ul>
 
-    <ul class="pagination">
-        {% for p in range(1, nbPages) %}
-            <li{% if p == page %} class="active"{% endif %}>
-                <a href="{{ path('es_platform_home', {'page': p}) }}">{{ p }}
-                </a>
-            </li>
-        {% endfor %}
-    </ul>
+	<nav aria-label="Pagination">
+	  <ul class="pagination">
+	    <li {% if page == 1 %} class="page-item disabled" {% else %} class="page-item" {% endif %}>
+	      <a class="page-link" href="{{ path('es_platform_home', {'page': (page-1)}) }}" {% if page == 1 %} tabindex="-1" {% endif %} aria-label="Previous">
+	        <span aria-hidden="true">&laquo;</span>
+	        <span class="sr-only">Previous</span>
+	      </a>
+	    </li>
+	    {% for p in range(1, nbPages) %}
+	    <li {% if p == page %} class="page-item active"{% else %} class="page-item"{% endif %}>
+	    	<a class="page-link" href="{{ path('es_platform_home', {'page': p}) }}">{{ p }}</a>
+	    </li>
+	    {% endfor %}
+	    <li {% if page == nbPages %} class="page-item disabled" {% else %} class="page-item" {% endif %}>
+	      <a class="page-link" href="{{ path('es_platform_home', {'page': (page+1)}) }}" {% if page == nbPages %} tabindex="-1" {% endif %} aria-label="Next">
+	        <span aria-hidden="true">&raquo;</span>
+	        <span class="sr-only">Next</span>
+	      </a>
+	    </li>
+	  </ul>
+	</nav>
 
 {% endblock %}
